fix the broken layout for phone/tablet on the library categories page close #25

--- a/themes/oden/sass/layout/_main.scss
+++ b/themes/oden/sass/layout/_main.scss
@@ -58,6 +58,7 @@ main.with-sidebar
       float: none;
       width: auto;
       margin-top: 25px;
+      clear: both;
     }
   }
 }
